--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.application.name=blog-app
 
-spring.datasource.url =jdbc:mysql://localhost:3306/blog-app?crateDataIfNotExist=true
+spring.datasource.url =jdbc:mysql://localhost:3306/blog-app?createDatabaseIfNotExist=true
 spring.datasource.username = root
 spring.datasource.password = scoping01
+
+spring.jpa.hibernate.ddl-auto=create
